# state_space_control

./: README.md  package.xml  setup.cfg  setup.py
examples/: hinf_design.yaml  lqr_design.yaml
state_space_control/: __init__.py  analysis.py  base.py  cli.py  excitations.py  simulation.py  trajectory.py
state_space_control/controllers/: __init__.py  hinf.py  lqg.py  lqr.py  pid.py
test/: test_controllers.py  test_excitations.py  test_pid.py  test_simulation.py  test_trajectory.py
